# RaftSysMods

./: CMakeLists.txt  Kconfig  LICENSE  README.md  TODO.md  library.json
components/: CMakeLists.txt
components/BLEManager/: BLEAdDecode.cpp  BLEAdDecode.h  BLEAdvertDecoder.cpp  BLEAdvertDecoder.h  BLEBusDeviceManager.cpp  BLEBusDeviceManager.h  BLEConfig.h  BLEConsts.h  BLEGapServer.cpp  BLEGapServer.h  BLEGattOutbound.cpp  BLEGattOutbound.h  BLEGattServer.cpp  BLEGattServer.h  BLEManStats.h  BLEManager.cpp  BLEManager.h  BLEStdServices.cpp  BLEStdServices.h  BTHomeConsts.h  BusBLE.cpp  BusBLE.h
components/CommandFile/: CommandFile.cpp  CommandFile.h
components/CommandSerial/: CommandSerial.cpp  CommandSerial.h  CommandSerialPort.cpp  CommandSerialPort.h
components/CommandSocket/: CommandSocket.cpp  CommandSocket.h
components/CommsChannelManager/: CommsChannel.cpp  CommsChannelManager.cpp  CommsChannelManager.h
components/DataCollection/: SampleCollectorJSON.cpp  SampleCollectorJSON.h
components/ESPNowManager/: ESPNowConfig.cpp  ESPNowConfig.h  ESPNowManager.cpp  ESPNowManager.h  ESPNowPacketHeader.h
components/ESPOTAUpdate/: ESPOTAUpdate.cpp  ESPOTAUpdate.h
components/FileManager/: FileManager.cpp  FileManager.h
components/FlashCriticalSection/: FlashCriticalSection.cpp  FlashCriticalSection.h
components/LogManager/: LogManager.cpp  LogManager.h  LoggerLoki.cpp  LoggerLoki.h  LoggerPapertrail.cpp  LoggerPapertrail.h  LoggerRaftRemote.cpp  LoggerRaftRemote.h
components/MQTTManager/: MQTTManager.cpp  MQTTManager.h
components/NetworkManager/: NetworkManager.cpp  NetworkManager.h
components/ProtocolExchange/: FileStreamSession.cpp  FileStreamSession.h  ProtocolExchange.cpp  ProtocolExchange.h
components/RegisterSysMods/: RegisterSysMods.h
components/SerialConsole/: SerialConsole.cpp  SerialConsole.h
components/StatePublisher/: StatePublisher.cpp  StatePublisher.h
components/WebServer/: WebServer.cpp  WebServer.h  WebServerResource.h
devdocs/: BLE-publish-throughput-analysis.md
examples/ESPNowTest/: README.md
examples/ESPNowTest/components/MainSysMod/: CMakeLists.txt  MainSysMod.cpp  MainSysMod.h
examples/ESPNowTest/main/: CMakeLists.txt  main.cpp
examples/ESPNowTest/systypes/Common/: features.cmake
examples/ESPNowTest/systypes/qtpys3/: SysTypes.json  features.cmake  partitions.csv  sdkconfig.defaults
